# bitchatz-cpp

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  build.sh  main.cpp
.github/workflows/: build.yml
cmake/: noise-c.cmake
extras/docs/: architecture.md  development.md  protocol.md  troubleshooting.md  usage.md
include/bitchat/compression/: compression_manager.h
include/bitchat/core/: bitchat_data.h  bitchat_manager.h  constants.h  identity_manager.h  message_manager.h  network_manager.h
include/bitchat/crypto/: crypto_manager.h
include/bitchat/helpers/: chat_helper.h  protocol_helper.h  string_helper.h  user_interface_helper.h
include/bitchat/identity/: identity_models.h  secure_identity_state_manager.h
include/bitchat/noise/: noise_hybrid_key_exchange.h  noise_post_quantum.h  noise_post_quantum_key_exchange.h  noise_pq_handshake_pattern.h  noise_protocol.h  noise_protocol_migration.h  noise_security_error.h  noise_session.h
include/bitchat/platform/: bluetooth_bridge.h  bluetooth_factory.h  bluetooth_interface.h
include/bitchat/protocol/: binary_protocol.h  bitchat_protocol.h  message_padding.h  packet.h  packet_serializer.h  utils.h
include/bitchat/runners/: bluetooth_announce_runner.h  cleanup_runner.h
include/bitchat/services/: crypto_service.h  identity_service.h  message_service.h  network_service.h  noise_service.h
include/bitchat/ui/: console_ui.h  dummy_ui.h  ui_interface.h
src/: main.cpp
src/bitchat/compression/: compression_manager.cpp
src/bitchat/core/: bitchat_data.cpp  bitchat_manager.cpp  identity_manager.cpp  message_manager.cpp  network_manager.cpp
src/bitchat/crypto/: crypto_manager.cpp
src/bitchat/helpers/: chat_helper.cpp  protocol_helper.cpp  string_helper.cpp
src/bitchat/identity/: identity_models.cpp
src/bitchat/noise/: noise_hybrid_key_exchange.cpp  noise_post_quantum_key_exchange.cpp  noise_pq_handshake_pattern.cpp  noise_protocol.cpp  noise_protocol_migration.cpp  noise_security_error.cpp  noise_session.cpp
src/bitchat/protocol/: packet.cpp  packet_serializer.cpp  packet_utils.cpp  utils.cpp
src/bitchat/runners/: bluetooth_announce_runner.cpp  cleanup_runner.cpp
src/bitchat/services/: crypto_service.cpp  identity_service.cpp  message_service.cpp  network_service.cpp  noise_service.cpp
src/bitchat/ui/: console_ui.cpp  dummy_ui.cpp
tests/: CMakeLists.txt
tests/bitchat/core/: bitchat_manager_test.cpp
tests/bitchat/helpers/: chat_helper_test.cpp  string_helper_test.cpp  user_interface_helper_test.cpp
tests/fixtures/: fixture_bitchat_manager.h
tests/mock/: mock_bluetooth.h  mock_bluetooth_interface.h
